@@ -1,3 +1,18 @@
+/*
+ * Copyright 2008 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.powermock.api.easymock.internal.invocationcontrol;
 
 import java.lang.reflect.Constructor;
@@ -33,15 +48,16 @@ public class NewInvocationControlImpl<T> implements NewInvocationControl<IExpect
 			args = (Object[]) args[0];
 		}
 		try {
-			final MockType mockType = ((EasyMockMethodInvocationControl<?>) MockRepository.getInstanceMethodInvocationControl(substitute))
-					.getMockType();
+			final MockType mockType = ((EasyMockMethodInvocationControl<?>) MockRepository
+					.getInstanceMethodInvocationControl(substitute)).getMockType();
 			Object result = substitute.performSubstitutionLogic(args);
 
 			if (result == null) {
 				if (mockType == MockType.NICE) {
 					result = EasyMock.createNiceMock(subsitutionType);
 				} else {
-					throw new IllegalStateException("Must replay class " + type.getName() + " to get configured expectation.");
+					throw new IllegalStateException("Must replay class " + type.getName()
+							+ " to get configured expectation.");
 				}
 			}
 			return result;
